# ca-miner

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly.yml  release.yml
scripts/: test-coverage.sh
src/: address.rs  config.rs  lib.rs  logger.rs  main.rs  mining.rs  utils.rs
